<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="wgo_app.wgo.ShareActivity">
<ImageView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:src="@drawable/home_background"
    android:scaleType="centerCrop"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#dda4a4a4">

        <ImageView
            android:id="@+id/saved_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/saved_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="150dp"/>
        <com.cotton.ui.AvenirTextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/saved_image"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:letterSpacing="0.1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/saved1"/>
        <com.cotton.ui.AvenirTextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text1"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:letterSpacing="0.1"
            android:layout_centerHorizontal="true"
            android:text="@string/saved2"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">
            <LinearLayout
                android:id="@+id/share_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="100"
                android:orientation="horizontal">
                <LinearLayout
                    android:id="@+id/instagram_layout"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="49"
                    android:gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/instagram_button"/>
                    <com.cotton.ui.AvenirTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/share_on"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:layout_marginTop="10dp"
                        android:letterSpacing="0.1"/>
                    <com.cotton.ui.AvenirTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/instagram"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:letterSpacing="0.1"
                        android:layout_marginBottom="15dp"/>
                </LinearLayout>
            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/grey"></RelativeLayout>
            </LinearLayout>
                <LinearLayout
                    android:id="@+id/facebook_layout"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="49"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/facebook_button"/>
                    <com.cotton.ui.AvenirTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/share_on"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:letterSpacing="0.1"
                        android:layout_marginTop="10dp"/>
                    <com.cotton.ui.AvenirTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/facebook"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:letterSpacing="0.1"
                        android:layout_marginBottom="15dp"/>
                </LinearLayout>
            </LinearLayout>
            <RelativeLayout
                android:id="@+id/border"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey"
                android:layout_below="@+id/share_layout"/>
            <Button
                android:id="@+id/close_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@+id/border"
                android:background="@android:color/transparent"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:text="@string/close"/>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
