<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="wgo_app.wgo.MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:padding="10dp"
        android:src="@drawable/weather_button" />

        <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:src="@drawable/cotton_logo" />

    <RelativeLayout
        android:id="@+id/layout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/beach_club"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:letterSpacing="0.1"
            android:text="@string/beach_club"
            android:textColor="@color/white"
            android:textSize="18dp" />

        <RelativeLayout
            android:layout_width="50dp"
            android:layout_height="1dp"
            android:layout_below="@+id/beach_club"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="7dp"
            android:background="@color/white" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="7dp">

        <TextView
            android:id="@+id/lounge_club"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:letterSpacing="0.1"
            android:text="@string/lounge_club"
            android:textColor="@color/white"
            android:textSize="18dp" />

        <RelativeLayout
            android:layout_width="50dp"
            android:layout_height="1dp"
            android:layout_below="@+id/lounge_club"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="7dp"
            android:background="@color/white" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="7dp">

        <TextView
            android:id="@+id/hotel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:letterSpacing="0.1"
            android:text="@string/hotel"
            android:textColor="@color/white"
            android:textSize="18dp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="99"
        android:paddingBottom="15dp">

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/event_button" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/camera_button" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/music_button" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>