<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp">


        <com.cotton.ui.AvenirTextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:letterSpacing="0.1"
            android:text="FOODS AND DRINKS"
            android:textColor="@color/grey_dark"
            android:textSize="16dp" />

        <RelativeLayout
            android:id="@+id/border"
            android:layout_width="50dp"
            android:layout_height="1dp"
            android:layout_below="@+id/title"
            android:layout_marginTop="5dp"
            android:background="@color/grey_dark"></RelativeLayout>

        <com.cotton.ui.AvenirTextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/border"
            android:layout_marginTop="15dp"
            android:letterSpacing="0.1"
            android:text="Quality and passion joined."
            android:textColor="@color/grey"
            android:textSize="12dp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/info_layout"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/menu_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_row">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/placeholder_menu"
                android:scaleType="centerCrop"
                android:layout_centerVertical="true"/>
            <com.cotton.ui.AvenirTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:letterSpacing="0.1"
                android:text="@string/menu"
                android:textColor="@color/white"
                android:textSize="30dp"
                android:layout_centerInParent="true"
                android:shadowColor="@color/grey_dark"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_below="@+id/location_layout"
            android:background="@color/white" />

        <RelativeLayout
            android:id="@+id/wines_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_row">
            <ImageView
                android:id="@+id/location_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/placeholder_wines"
                android:scaleType="centerCrop"
                android:layout_centerVertical="true"/>
            <com.cotton.ui.AvenirTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:letterSpacing="0.1"
                android:text="@string/wines"
                android:textColor="@color/white"
                android:textSize="30dp"
                android:layout_centerInParent="true"
                android:shadowColor="@color/grey_dark"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_below="@+id/location_layout"
            android:background="@color/white" />
        <RelativeLayout
            android:id="@+id/cocktails_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_row">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/placeholder_cocktails"
                android:scaleType="centerCrop"
                android:layout_centerVertical="true"/>
            <com.cotton.ui.AvenirTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:letterSpacing="0.1"
                android:text="@string/cocktails"
                android:textColor="@color/white"
                android:textSize="30dp"
                android:layout_centerInParent="true"
                android:shadowColor="@color/grey_dark"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/location_layout"
            android:background="@color/white" />

    </LinearLayout>
</RelativeLayout>
