<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp">


        <com.cotton.ui.AvenirTextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:letterSpacing="0.1"
            android:text="DON’T MISS YOUR SEAT"
            android:textColor="@color/grey_dark"
            android:textSize="16dp" />

        <RelativeLayout
            android:id="@+id/border"
            android:layout_width="50dp"
            android:layout_height="1dp"
            android:layout_below="@+id/title"
            android:layout_marginTop="5dp"
            android:background="@color/grey_dark"></RelativeLayout>

        <com.cotton.ui.AvenirTextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/border"
            android:layout_marginTop="15dp"
            android:letterSpacing="0.1"
            android:text="We advise you to make your reservation well in advance. Please note that your reservation is not confirmed before you receive a written confirmation from us."
            android:textColor="@color/grey"
            android:textSize="12dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/border1"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@+id/info_layout"
        android:layout_marginTop="20dp"
        android:background="@color/grey"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/border1">

        <RelativeLayout
            android:id="@+id/book_layout"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/white_row">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp">

                <com.cotton.ui.AvenirTextView
                    android:id="@+id/booking_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:letterSpacing="0.1"
                    android:text="@string/online_booking"
                    android:textColor="@color/grey"
                    android:textSize="12dp" />

                <com.cotton.ui.AvenirTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/booking_title"
                    android:layout_marginTop="2dp"
                    android:letterSpacing="0.1"
                    android:text="@string/book_online"
                    android:textColor="@color/grey_dark"
                    android:textSize="12dp" />
            </RelativeLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:src="@drawable/arrow_blue" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/border2"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_below="@+id/book_layout"
            android:background="@color/grey"/>

        <RelativeLayout
            android:id="@+id/phone_layout"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_below="@+id/border2"
            android:background="@drawable/white_row">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp">

                <com.cotton.ui.AvenirTextView
                    android:id="@+id/phone_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:letterSpacing="0.1"
                    android:text="@string/phone_booking"
                    android:textColor="@color/grey"
                    android:textSize="12dp" />

                <com.cotton.ui.AvenirTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/phone_title"
                    android:layout_marginTop="2dp"
                    android:letterSpacing="0.1"
                    android:text="(+34) 971 80 61 80"
                    android:textColor="@color/grey_dark"
                    android:textSize="12dp" />
            </RelativeLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:src="@drawable/arrow_blue" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_below="@+id/phone_layout"
            android:background="@color/grey"/>
    </RelativeLayout>
</RelativeLayout>
